use immutable collection creation | remove MathUtil.clamp