@@ -57,7 +57,7 @@ public class PlateRollerGUI implements IScreen {
 				if(!currentItem.isEmpty()) {
 					EntityRollingStockDefinition def = new ItemPlate.Data(currentItem).def;
 					if (def != null && ConfigBalance.DesignGaugeLock) {
-						List<Gauge> validGauges = Collections.singletonList(Gauge.from(def.recommended_gauge.value()));
+						List<Gauge> validGauges = List.of(Gauge.from(def.recommended_gauge.value()));
 						gauge = next(validGauges, gauge, hand);
 					} else {
 						gauge = next(Gauge.values(), gauge, hand);
