@@ -29,7 +29,7 @@ public class ItemPlate extends CustomItem {
 
 	@Override
 	public List<CreativeTab> getCreativeTabs() {
-		return Collections.singletonList(ItemTabs.MAIN_TAB);
+		return List.of(ItemTabs.MAIN_TAB);
 	}
 
 
@@ -80,7 +80,7 @@ public class ItemPlate extends CustomItem {
 	@Override
 	public List<String> getTooltip(ItemStack stack)
     {
-    	return Collections.singletonList(GuiText.GAUGE_TOOLTIP.toString(new Data(stack).gauge));
+    	return List.of(GuiText.GAUGE_TOOLTIP.toString(new Data(stack).gauge));
     }
 
     public static class Data extends ItemDataSerializer {
