@@ -28,14 +28,14 @@ public class ItemRadioCtrlCard extends CustomItem {
 
     @Override
     public List<CreativeTab> getCreativeTabs() {
-        return Collections.singletonList(ItemTabs.MAIN_TAB);
+        return List.of(ItemTabs.MAIN_TAB);
     }
 
 
     @Override
     public List<String> getTooltip(ItemStack stack) {
         Data d = new Data(stack);
-        return Collections.singletonList(d.linked == null ? GuiText.RADIO_CARD_NOT_LINKED.toString() : GuiText.RADIO_CARD_LINKED_TO.toString(d.linked));
+        return List.of(d.linked == null ? GuiText.RADIO_CARD_NOT_LINKED.toString() : GuiText.RADIO_CARD_LINKED_TO.toString(d.linked));
     }
 
     public static class Data extends ItemDataSerializer {
