@@ -35,7 +35,7 @@ public class ItemRailAugment extends CustomItem {
 
 	@Override
 	public List<CreativeTab> getCreativeTabs() {
-		return Collections.singletonList(ItemTabs.MAIN_TAB);
+		return List.of(ItemTabs.MAIN_TAB);
 	}
 
 
@@ -111,7 +111,7 @@ public class ItemRailAugment extends CustomItem {
 	@Override
 	public List<String> getTooltip(ItemStack stack)
     {
-        return Collections.singletonList(GuiText.GAUGE_TOOLTIP.toString(new Data(stack).gauge));
+        return List.of(GuiText.GAUGE_TOOLTIP.toString(new Data(stack).gauge));
     }
 
 	@Override
