@@ -39,8 +39,8 @@ public class TrackModel extends OBJModel{
                 groups.put(part, parts);
             }
             groupNamesMapper.put("single", groups);
-            randomMap = Collections.singletonMap("single", () -> "single");
-            this.order = new TrackOrder(Collections.singletonList("single"));
+            randomMap = Map.of("single", () -> "single");
+            this.order = new TrackOrder(List.of("single"));
             List<String> rails = this.groups().stream()
                                      .filter(group -> TrackModelPart.RAIL_LEFT.is(group) || TrackModelPart.RAIL_RIGHT.is(group))
                                      .collect(Collectors.toList());
